--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "supabase": "^1.148.6"
   }
 }
