--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "stripe": "^14.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
