--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
@@ -31,9 +32,11 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
+    "uniqid": "^5.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/uniqid": "^5.3.4",
     "supabase": "^1.148.6"
   }
 }
